/**
** @创建时间: 2022/3/5 12:48
** @作者　　: return
** @描述　　:
 */

syntax = "proto3";
package assets;
option go_package = "app/grpc/assets";

service Assets {
  rpc GetPrevPath (AssetsRequest) returns (AssetsReply) {}
}

message AssetsRequest {
  string filePath = 1;
}

message Data {
  string prevPath = 1;
}

message AssetsReply {
  int32 code = 1;
  string msg = 2;
  Data data = 3;
}
